style: fix overflow in search item

--- a/src/components/search/SearchResultItem.css
+++ b/src/components/search/SearchResultItem.css
@@ -18,8 +18,8 @@
 }
 
 .search-result-item .image {
-  width: 160px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   overflow: hidden;
 }
 
@@ -32,46 +32,52 @@
 
 
 
-.search-result-item .content {
+.search-item-content-side {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: var(--space-2);
 }
 
-.search-result-item .content * {
+.search-item-content-side * {
   margin: 0;
 }
 
-.search-result-item .content a {
+.search-item-content-side a {
   text-decoration: none;
   color: var(--text-secondary);
 }
 
-.search-result-item .content h3 {
+.search-item-content-side h3 {
   font-size: var(--font-lg);
   font-weight: 500;
 }
 
-.search-result-item .content .date {
+.search-item-content-side .date {
   font-size: var(--font-sm);
   color: var(--text-secondary);
   font-weight: 400;
 }
 
-.search-result-item .content .source {
+.search-item-content-side .source {
   display: flex;
   gap: var(--space-2);
   color: var(--primary);
 }
 
-.search-result-item .content .description {
+.search-item-content-side .description {
   font-size: var(--font-md);
   font-weight: 400;
 }
 
 
 @media screen and (min-width: 768px) {
+  .search-result-item .image {
+    width: 160px;
+    height: 100%;
+    max-height: 200px;
+    overflow: hidden;
+  }
 
   .search-result-item {
     width: calc(50% - 2.6rem);
@@ -81,5 +87,6 @@
   .search-result-item.full-width{
     width: 100%;
   }
+
   
 }
