--- a/src/components/topic/FollowAuthor.css
+++ b/src/components/topic/FollowAuthor.css
@@ -8,6 +8,7 @@
 .byline {
   font-size: var(--font-sm);
   font-weight: 500;
+  white-space: wrap;
 }
 
 .author .follow-author {
